--- a/src/css/Stock.css
+++ b/src/css/Stock.css
@@ -21,4 +21,11 @@
 	border-bottom: 2px solid black;
 	line-height: 1.8;
 }
+.photo {
+	height: 180px;
+	width: 200px; 
+}
+.spaceBetweenImage{
+	padding: 10px;
+}
 
